# pygtail

./: .gitignore  pyproject.toml  tox.ini
pygtail/: core.py
pygtail/test/: test_pygtail.py
